# ctp-swig

./: CMakeLists.txt  LICENSE  README.md  compile-linux.sh  compile-win.bat
6.3.15/: CMakeLists.txt
6.3.19/: CMakeLists.txt
6.5.1/: CMakeLists.txt
6.6.1/: CMakeLists.txt
6.6.7/: CMakeLists.txt  auto_compile.bat
6.6.9/: CMakeLists.txt
6.7.0/: CMakeLists.txt  auto_compile.bat
6.7.1/: CMakeLists.txt
6.7.1/win32/: thostmduserapi_se.lib  thosttraderapi_se.lib
6.7.2/: CMakeLists.txt
6.7.7/: CMakeLists.txt  auto_compile.sh
tests/: __init__.py  auto.py  linux-auto.sh  test-linux.sh  test-win.bat  test.py  test_mdapi.py  test_tdapi.py  win-auto.bat
